@@ -1,3 +1,11 @@
+Fri Aug  6 17:36:45 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * bin/fuzz.pl:
+
+          Added a "trailing whitespace" check (not enabled by default).
+          Added the ability to pass multiple test names on the command line.
+          Extend the "too long file name" check to some additional file types.
+
 Fri Aug  6 08:39:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * protocols/ace/TMCast/TMCast.mpc:
